fix(page): fixes overflow

--- a/src/components/page.module.css
+++ b/src/components/page.module.css
@@ -1,6 +1,5 @@
 .page {
   display: flex;
-  overflow: hidden;
   flex-direction: column;
   height: 100%;
 }
